finished interpreter functionality

--- a/public/about.html
+++ b/public/about.html
@@ -61,8 +61,20 @@
                         <td>Decrements the data at the iterator's location by 1</td>
                     </tr>
                     <tr>
-                        <td>robhess</td>
+                        <td>!robhess</td>
                         <td>Outputs the data at the iterator's location</td>
+                    </tr>
+                    <tr>
+                        <td>+ROBHESS</td>
+                        <td>Outsputs the value of the data at the current iterator plus that of the previous iterator</td>
+                    </tr>
+                    <tr>
+                        <td>-ROBHESS</td>
+                        <td>Outsputs the value of the data at the current iterator minus that of the previous iterator</td>
+                    </tr>
+                    <tr>
+                        <td>hessro(someNumber)</td>
+                        <td>sets the entire array to someNumber.</td>
                     </tr>
                 </tbody>
             </table>
