--- a/public/example.html
+++ b/public/example.html
@@ -25,7 +25,48 @@
             </nav>
         </header>
         <main>
-            <!--Eytan's job-->
+            <h3>Basic "Hello World" for Hessro</h3>
+            <h3 id="inputHeader">Input:</h3>
+            <h3 id="outputHeader">Output: Prints out "Hello Rob"</h3>
+            <div id="ioArea">
+                <textarea disabled spellcheck="false" type="text" id="inputBox">hessro(65)
+ROB ROB ROB ROB ROB ROB ROB !robhess
+rob
+ROB ROB ROB ROB !robhess
+rob
+ROB ROB ROB ROB ROB ROB ROB ROB ROB ROB ROB !robhess !robhess
+rob
+ROB ROB ROB ROB ROB ROB ROB ROB ROB ROB ROB ROB ROB ROB !robhess
+rob
+HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS HESS !robhess
+rob
+hess hess hess ROB ROB ROB ROB ROB ROB !robhess
+rob
+!robhess
+rob rob
+ROB !robhess</textarea>
+                <div id="outputBox">HELLO ROB</div>
+            </div>
+
+            <br />
+
+
+
+
+            <h3>Basic Addition: Adds 2 and 2</h3>
+            <h3 id="inputHeader">Input:</h3>
+            <h3 id="outputHeader">Output: Prints 4</h3>
+            <div id="ioArea">
+                <textarea disabled spellcheck="false" type="text" id="inputBox">hessro(0)
+ROB ROB
+rob
+ROB ROB
++ROBHESS
+!robhess</textarea>
+                <div id="outputBox">4</div>
+            </div>
+
+            <br />
         </main>
     </body>
 
