--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
             <h3 id="inputHeader">Input:</h3>
             <h3 id="outputHeader">Output:</h3>
             <div id="ioArea">
-                <textarea type="text" id="inputBox" placeholder="Enter your hessro code here"></textarea>
-                <div id="outputBox">THIS SHOULD BE DELETED BY JAVASCRIPT</div>
+                <textarea spellcheck="false" type="text" id="inputBox" placeholder="Enter your hessro code here"></textarea>
+                <div id="outputBox">Result</div>
             </div>
             <button type="button" id="compileButton">Compile and Run</button>
         </main>
