--- a/public/about.html
+++ b/public/about.html
@@ -30,7 +30,7 @@
             <h3>What is hessro?</h3>
             <p>Hessro is an esoteric programming language inspired by the brainf*ck language. The language is scanned by our javascript program in order to perform basic
                 commands onto an array. Similar to brainf*ck, these commands are able to move a single iterator to different locations on the array, as well as change the data
-                contained in the array.</p>
+                contained in the array by incrementing, adding, etc.</p>
             
             <h3>Who is Rob Hess and why is he a programming language?</h3>
             <p>Rob Hess is our lovely, handsome professor for Web Developement at Oregon State University. For our final project in this class we decided to use his name to design
